2017-06-27 Ike Panhc <ike.pan@canonical.com>

	* libfreeipmi/locate/ipmi-locate-dmidecode.c: Use dmi firmware in
	sysfs if available.  mmap() does not work on DMI tables so also
	fallback to read if mmap() failed.

2017-04-07 LaMont Jones <lamont@mmjgroup.com>

	* ipmi-config/: Support ability to read some IPv6 config
	information.
	
2017-04-03 LaMont Jones <lamont@mmjgroup.com>

	* libfreeipmi/: Add support to read IPv6 configuration.
	
2017-03-20 Albert Chu <chu11@llnl.gov>
	
	* man/ipmiseld.8.pre.in: Clarify --test-run and --foreground
	options.

	* common/toolcommon/tool-daemon-common.c (daemonize_common):
	Clarify fopen error on daemon pidfile

2017-01-30 Albert Chu <chu11@llnl.gov>
	
	* doc/freeipmi-bugs-and-workarounds.txt: Document issue with
	ASROCK MT-C224.

2017-01-21 Albert Chu <chu11@llnl.gov>

	* man/ipmi-raw.8.pre.in: Fix formatting error.
	
2017-01-18 Albert Chu <chu11@llnl.gov>

	* man/ipmi-oem.8.pre.in: Fix cut and paste documentation error.

2017-01-17 Albert Chu <chu11@llnl.gov>

	* ipmi-config/: Use inet_ntop() to output IPv4 addresses instead
	of outputting "by hand".

2017-01-03 Albert Chu <chu11@llnl.gov>

	* common/toolcommon/pstdout.c (pstdout_hostnames_count): Slight
	logic change to differentiate between bad input and out of memory.

	* libfreeipmi/api/ipmi-api-util.c (api_set_api_errnum_by_errno):
	Recognize ENETUNREACH and EHOSTUNREACH errno's as system errors,
	not internal errors.
	
2016-12-28 Albert Chu <chu11@llnl.gov>

	* Globally support IPv6 address support in all tools as options,
	parameters, or inputs.  Globally support [ADDRESS]:PORT format for
	IPv6 address + ports.  Support additional strings indicating
	"localhost", such as "ipv6-localhost".

2016-12-06 LaMont Jones <lamont@mmjgroup.com>

	* ipmipower/: Initial pass at IPv6 support.

2016-12-05 Albert Chu <chu11@llnl.gov>

	Support IPv6 addresses in FreeIPMI

	* common/miscutil/fi_hostlist.h, common/miscutil/fi_hostlist.c:
	New files.  Wrapper around hostlist.[ch].
